# jj-axi

./: .gitattributes  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  PRD.md  README.md  THIRD_PARTY_LICENSES.html  about.hbs  about.toml
.github/workflows/: ci.yml  no-mistakes-required.yml  release.yml
docs/: agent-reference.md  axi-applicability.md
docs/adr/: 0001-hunk-addressing.md  0002-operation-aware-undo.md  0003-github-integration-through-gh.md  0004-skill-led-discovery.md  0005-editor-free-stack-removal.md  0006-atomic-change-partitioning.md  0007-companion-interface-and-bootstrap.md
docs/agents/: domain.md
skills/jj-axi/: BOOTSTRAP.md  SKILL.md
src/: cli.rs  commands.rs  error.rs  github_bridge.rs  jj_bridge.rs  lib.rs  main.rs  model.rs  partition.rs  setup.rs  toon.rs
tests/: help_cli.rs  m1_cli.rs  m2_cli.rs  m3_cli.rs  m4_cli.rs  m4_pr_cli.rs  m4_setup_cli.rs  m5_cli.rs
tests/common/: mod.rs
