[package]
name = "jj-axi"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Agent-native command-line interface for Jujutsu"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = "=0.4.44"
clap = { version = "=4.6.1", features = ["derive"] }
futures = "=0.3.32"
jj-cli = { version = "=0.43.0", default-features = false, features = ["git"] }
jj-lib = { version = "=0.43.0" }
similar = "=3.1.1"
tokio = { version = "=1.52.3", features = ["macros", "rt"] }

[dev-dependencies]
jj-lib = { version = "=0.43.0", features = ["testing"] }
tempfile = "=3.27.0"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
