[package]
name = "jj-axi"
version = "0.2.1"
edition = "2024"
rust-version = "1.89"
description = "Machine-first Jujutsu companion for non-trivial history editing"
license = "MIT"
repository = "https://github.com/aivv73/jj-axi"
homepage = "https://github.com/aivv73/jj-axi"
readme = "README.md"

[dependencies]
chrono = "=0.4.44"
clap = { version = "=4.6.1", features = ["derive"] }
futures = "=0.3.32"
gix = { version = "=0.85.0", default-features = false }
jj-cli = { version = "=0.43.0", default-features = false, features = ["git"] }
jj-lib = { version = "=0.43.0" }
similar = "=3.1.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
serde_path_to_error = "=0.1.20"
sha2 = "=0.10.9"
tokio = { version = "=1.52.3", features = ["macros", "rt"] }

[dev-dependencies]
jj-lib = { version = "=0.43.0", features = ["testing"] }
tempfile = "=3.27.0"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
